[package]
name = "kanils"
version = "1.1.0"
authors = ["The FrugalOS Developers"]
description = "Kind and Nice tool for Lump Storage"
homepage = "https://github.com/frugalos/kanils"
repository = "https://github.com/frugalos/kanils"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
cannyls = "^0.9"
clap = "2"
structopt = "^0.2.11"
trackable = "^0.2.20"
rustyline = "2"
regex = "1"

[dev-dependencies]
tempdir = "^0.3.7"
