[package]
name = "kanils"
version = "1.1.0"
authors = ["The FrugalOS Developers"]
description = "Kind and Nice tool for Lump Storage"
homepage = "https://github.com/frugalos/kanils"
repository = "https://github.com/frugalos/kanils"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
byteorder = { version = "1", features = ["i128"] }
cannyls = { git = "https://github.com/frugalos/cannyls/", branch = "devicedax" }
clap = "2"
structopt = "^0.2.11"
trackable = "^0.2.20"
rustyline = "2"
regex = "1"
indicatif = "^0.11"
rand = "^0.6"

[dev-dependencies]
tempfile = "3"
