[package]
edition = "2018"
name = "kanils"
version = "1.2.0"
authors = ["The FrugalOS Developers"]
description = "Kind and Nice tool for Lump Storage"
homepage = "https://github.com/frugalos/kanils"
repository = "https://github.com/frugalos/kanils"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
byteorder = { version = "1", features = ["i128"] }
cannyls = "^0.10"
clap = "2"
structopt = "^0.2.11"
trackable = "^0.2.20"
rustyline = "5"
regex = "1"
indicatif = "^0.11"
rand = "^0.6"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
trackable = { git = "https://github.com/koba-e964/trackable", branch = "fix/hygiene" }